tests/good/read_float.xprshn
int a!
float b!

read a!
read b!

print a!
print b!

print a + b!
print a - b!
print a * b!
print a / b!
