tests/compile_error/nested_expr.xprshn
// Compile error: deeply nested expressions
int a!
a = 5!
print (a + (a * (a + (a * (a + 1))))! // Deeply nested 